mutants.out/log/src__proto__batch__handle.rs_line_14_col_9.log

*** src/proto/batch/handle.rs:14:9: replace BatchHandle<'a, S>::id -> &BatchId with &Default::default()

*** mutation diff:
--- src/proto/batch/handle.rs
+++ replace BatchHandle<'a, S>::id -> &BatchId with &Default::default()
@@ -6,17 +6,17 @@
 pub struct BatchHandle<'a, S: AsyncBufReadExt + AsyncWriteExt + Unpin + Send> {
     bid: BatchId,
     c: &'a mut Client<S>,
 }
 
 impl<'a, S: AsyncBufReadExt + AsyncWriteExt + Unpin + Send> BatchHandle<'a, S> {
     /// ID issued by the Faktory server to this batch.
     pub fn id(&self) -> &BatchId {
-        &self.bid
+        &Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     pub(crate) fn new(bid: BatchId, c: &mut Client<S>) -> BatchHandle<'_, S> {
         BatchHandle { bid, c }
     }
 
     /// Add the given job to the batch.
     ///


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
    Finished dev [unoptimized + debuginfo] target(s) in 1.04s

*** result: Success

*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml --locked --all-features --all-targets
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0515]: cannot return reference to temporary value
  --> src/proto/batch/handle.rs:14:9
   |
14 |         &Default::default() /* ~ changed by cargo-mutants ~ */
   |         ^------------------
   |         ||
   |         |temporary value created here
   |         returns a reference to data owned by the current function

For more information about this error, try `rustc --explain E0515`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
